fixed contrast

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
   font-weight: 400;
   color-scheme: light dark;
   color: #ACFFAC;
-  background-color: #C7B8EA;
+  background-color: #9678dd;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
